Catching the FailedTaskError
This should hopefully avoid the stacktrace at the end and will give a
better idea of what's gone wrong to the developer.

JIRA: PLAT-822

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,8 @@
-FROM python:PYTHON_VERSION-alpine
+FROM python:3-alpine
 
 RUN mkdir /code
 WORKDIR /code
+ENV PYTHONPATH=/code
 
 RUN apk update
 RUN apk add gcc musl-dev libffi-dev openssl-dev
